Add an extra span for improved vertical centering

--- a/views/lexicon/tabs/progress_bars.html.twig
+++ b/views/lexicon/tabs/progress_bars.html.twig
@@ -220,21 +220,21 @@
     <h2 class="heading">Stepped Progress Bar</h2>
 
     <div class="stepped-progressbar">
-        <div class="step"><span class="step-box current">1</span></div>
-        <div class="step"><span class="step-box">2</span></div>
-        <div class="step"><span class="step-box">3</span></div>
+        <div class="step"><span class="step-box current"><span class="step-number">1</span></span></div>
+        <div class="step"><span class="step-box"><span class="step-number">2</span></span></div>
+        <div class="step"><span class="step-box"><span class="step-number">3</span></span></div>
         <div class="step last"><span class="step-box"><i class="icon-flag-checkered"></i></span></div>
     </div>
     <div class="stepped-progressbar">
         <div class="step successful"><span class="step-box completed"><i class="icon-ok"></i></span></div>
-        <div class="step"><span class="step-box current">2</span></div>
-        <div class="step"><span class="step-box">3</span></div>
+        <div class="step"><span class="step-box current"><span class="step-number">2</span></span></div>
+        <div class="step"><span class="step-box"><span class="step-number">3</span></span></div>
         <div class="step last"><span class="step-box"><i class="icon-flag-checkered"></i></span></div>
     </div>
     <div class="stepped-progressbar">
         <div class="step successful"><span class="step-box completed"><i class="icon-ok"></i></span></div>
         <div class="step successful"><span class="step-box completed"><i class="icon-ok"></i></span></div>
-        <div class="step"><span class="step-box current">3</span></div>
+        <div class="step"><span class="step-box current"><span class="step-number">3</span></span></div>
         <div class="step last"><span class="step-box"><i class="icon-flag-checkered"></i></span></div>
     </div>
     <div class="stepped-progressbar">
