--- a/stylesheets/_component.progress-bars.scss
+++ b/stylesheets/_component.progress-bars.scss
@@ -54,28 +54,13 @@
     position: relative;
     width: 50px;
 
-    span {
-      position: relative;
-      zoom: 1;
-
-      &::after {
-        border-top: 2px dotted color(gray);
-        content: '';
-        display: block;
-        left: 26px;
-        position: absolute;
-        top: 11px;
-        width: 1000px;
-      }
-    }
-
     &.successful span::after {
             border-top: 2px dotted color(success);
     }
 
     &.last span::after {
           width: 0;
-      }
+    }
   }
 
   .step-box {
@@ -84,9 +69,26 @@
     border-radius: 50%;
     display: block;
     font-size: 16px;
-    height: 26px;
+    height: 30px;
+    position: relative;
     text-align: center;
-    width: 26px;
+    width: 30px;
+    zoom: 1;
+
+    &.icon,
+    [class*='icon-'] {
+      vertical-align: middle;
+    }
+
+    &::after {
+      border-top: 2px dotted color(gray);
+      content: '';
+      display: block;
+      left: 30px;
+      position: absolute;
+      top: 14px;
+      width: 1000px;
+    }
 
     &.current {
       background-color: color(jadu-blue, pale);
@@ -104,6 +106,10 @@
       border-radius: 25%;
       color: color(success);
     }
+  }
+
+  .step-number {
+    vertical-align: middle;
   }
 }
 
