--- a/stylesheets/_component.progress-bars.scss
+++ b/stylesheets/_component.progress-bars.scss
@@ -1,115 +1,115 @@
 // Outer container
 .progress {
-  background-color: $progress-bg;
-  border-radius: $border-radius;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
-  height: $line-height-computed;
-  margin-bottom: $line-height-computed;
-  overflow: hidden;
+    background-color: $progress-bg;
+    border-radius: $border-radius;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
+    height: $line-height-computed;
+    margin-bottom: $line-height-computed;
+    overflow: hidden;
 }
 
 // Bar of progress
 .progress-bar {
-  background-color: color(primary);
-  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
-  color: color(white);
-  float: left;
-  font-size: $font-size-small;
-  height: 100%;
-  overflow: hidden;
-  padding-right: 5px;
-  text-align: right;
-  text-shadow: 0 1px 0 rgba(0, 0, 0, .15);
-  transition: width .6s ease;
-  width: 0%;
+    background-color: color(primary);
+    box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
+    color: color(white);
+    float: left;
+    font-size: $font-size-small;
+    height: 100%;
+    overflow: hidden;
+    padding-right: 5px;
+    text-align: right;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, .15);
+    transition: width .6s ease;
+    width: 0%;
 }
 
 .progress-bar--success {
-  background-color: color(success);
+    background-color: color(success);
 }
 
 .progress-bar--warning {
-  background-color: color(warning);
+    background-color: color(warning);
 }
 
 .progress-bar--danger {
-  background-color: color(danger);
+    background-color: color(danger);
 }
 
 .progress-bar--compact {
-  height: 5px;
+    height: 5px;
 }
 
+// Stepped Progressbar
 .stepped-progressbar {
-  background-color: color(gray, lightest);
-  display: table;
-  margin-bottom: 30px;
-  padding: 20px;
-  width: 100%;
+    display: table;
+    margin-bottom: 30px;
+    padding: 20px;
+    width: 100%;
 
-  .step {
-    display: block;
-    float: left;
-    overflow: hidden;
-    position: relative;
-    width: 50px;
+    .step {
+        display: block;
+        float: left;
+        overflow: hidden;
+        position: relative;
+        width: 50px;
 
-    &.successful span::after {
+        &.last span::after {
+            width: 0;
+        }
+
+        &.successful span::after {
             border-top: 2px dotted color(success);
+        }
     }
 
-    &.last span::after {
-          width: 0;
-    }
-  }
+    .step-box {
+        background-color: color(white);
+        border: 1px solid color(gray);
+        border-radius: 50%;
+        display: block;
+        font-size: 16px;
+        height: 30px;
+        position: relative;
+        text-align: center;
+        width: 30px;
+        zoom: 1;
 
-  .step-box {
-    background-color: color(white);
-    border: 1px solid color(gray);
-    border-radius: 50%;
-    display: block;
-    font-size: 16px;
-    height: 30px;
-    position: relative;
-    text-align: center;
-    width: 30px;
-    zoom: 1;
+        &.icon,
+        [class*='icon-'] {
+            vertical-align: middle;
+        }
 
-    &.icon,
-    [class*='icon-'] {
-      vertical-align: middle;
-    }
+        &::after {
+            border-top: 2px dotted color(gray);
+            content: '';
+            display: block;
+            left: 30px;
+            position: absolute;
+            top: 14px;
+            width: 1000px;
+        }
 
-    &::after {
-      border-top: 2px dotted color(gray);
-      content: '';
-      display: block;
-      left: 30px;
-      position: absolute;
-      top: 14px;
-      width: 1000px;
-    }
+        &.current {
+            background-color: color(jadu-blue, pale);
+            border-color: color(jadu-blue, darkest);
+            border-radius: 25%;
+        }
 
-    &.current {
-      background-color: color(jadu-blue, pale);
-      border-color: color(jadu-blue, darkest);
-      border-radius: 25%;
-    }
+        &.completed {
+            border-color: color(success);
+            color: color(success);
+        }
 
-    &.completed {
-      border-color: color(success);
-      color: color(success);
-    }
+        &.final {
+            border-color: color(success);
+            border-radius: 25%;
+            color: color(success);
+        }
+      }
 
-    &.final {
-      border-color: color(success);
-      border-radius: 25%;
-      color: color(success);
-    }
-  }
-
-  .step-number {
-    vertical-align: middle;
-  }
+      .step-number {
+          vertical-align: middle;
+      }
 }
 
