Add ARIA progressbar improvements

--- a/views/lexicon/tabs/progress_bars.html.twig
+++ b/views/lexicon/tabs/progress_bars.html.twig
@@ -219,29 +219,32 @@
     
     <h2 class="heading">Stepped Progress Bar</h2>
 
-    <div class="stepped-progressbar">
-        <div class="step"><span class="step-box current"><span class="step-number">1</span></span></div>
-        <div class="step"><span class="step-box"><span class="step-number">2</span></span></div>
-        <div class="step"><span class="step-box"><span class="step-number">3</span></span></div>
-        <div class="step last"><span class="step-box"><i class="icon-flag-checkered"></i></span></div>
-    </div>
-    <div class="stepped-progressbar">
-        <div class="step successful"><span class="step-box completed"><i class="icon-ok"></i></span></div>
-        <div class="step"><span class="step-box current"><span class="step-number">2</span></span></div>
-        <div class="step"><span class="step-box"><span class="step-number">3</span></span></div>
-        <div class="step last"><span class="step-box"><i class="icon-flag-checkered"></i></span></div>
-    </div>
-    <div class="stepped-progressbar">
-        <div class="step successful"><span class="step-box completed"><i class="icon-ok"></i></span></div>
-        <div class="step successful"><span class="step-box completed"><i class="icon-ok"></i></span></div>
-        <div class="step"><span class="step-box current"><span class="step-number">3</span></span></div>
-        <div class="step last"><span class="step-box"><i class="icon-flag-checkered"></i></span></div>
-    </div>
-    <div class="stepped-progressbar">
-        <div class="step successful"><span class="step-box completed"><i class="icon-ok"></i></span></div>
-        <div class="step successful"><span class="step-box completed"><i class="icon-ok"></i></span></div>
-        <div class="step successful"><span class="step-box completed"><i class="icon-ok"></i></span></div>
-        <div class="step last"><span class="step-box final"><i class="icon-flag-checkered"></i></span></div>
-    </div>
+    <ol class="stepped-progressbar" role="progressbar" aria-valuemin="1" aria-valuemax="4">
+        <li class="step" aria-valuenow="1"><span class="step-box current"><span class="step-number" aria-hidden="true">1</span></span></li>
+        <li class="step"><span class="step-box"><span class="step-number" aria-hidden="true">2</span></span></li>
+        <li class="step"><span class="step-box"><span class="step-number" aria-hidden="true">3</span></span></li>
+        <li class="step last"><span class="step-box"><i class="icon-flag-checkered" aria-hidden="true"></i></span></li>
+    </ol>
+
+    <ol class="stepped-progressbar" role="progressbar" aria-valuemin="1" aria-valuemax="4">
+        <li class="step successful"><span class="step-box completed"><i class="icon-ok" aria-hidden="true"></i></span></li>
+        <li class="step" aria-valuenow="2"><span class="step-box current"><span class="step-number" aria-hidden="true">2</span></span></li>
+        <li class="step"><span class="step-box"><span class="step-number" aria-hidden="true">3</span></span></li>
+        <li class="step last"><span class="step-box"><i class="icon-flag-checkered" aria-hidden="true"></i></span></li>
+    </ol>
+
+    <ol class="stepped-progressbar" role="progressbar" aria-valuemin="1" aria-valuemax="4">
+        <li class="step successful"><span class="step-box completed"><i class="icon-ok" aria-hidden="true"></i></span></li>
+        <li class="step successful"><span class="step-box completed"><i class="icon-ok" aria-hidden="true"></i></span></li>
+        <li class="step" aria-valuenow="3"><span class="step-box current"><span class="step-number" aria-hidden="true">3</span></span></li>
+        <li class="step last" ><span class="step-box"><i class="icon-flag-checkered" aria-hidden="true"></i></span></li>
+    </ol>
+
+    <ol class="stepped-progressbar" role="progressbar" aria-valuemin="1" aria-valuemax="4">
+        <li class="step successful"><span class="step-box completed"><i class="icon-ok" aria-hidden="true"></i></span></li>
+        <li class="step successful"><span class="step-box completed"><i class="icon-ok" aria-hidden="true"></i></span></li>
+        <li class="step successful"><span class="step-box completed"><i class="icon-ok" aria-hidden="true"></i></span></li>
+        <li class="step last" aria-valuenow="4"><span class="step-box final"><i class="icon-flag-checkered" aria-hidden="true" ></i></span></li>
+    </ol>
 
 {% endblock tab_content %}
