--- a/views/lexicon/tabs/progress_bars.html.twig
+++ b/views/lexicon/tabs/progress_bars.html.twig
@@ -219,6 +219,7 @@
     
     <h2 class="heading">Stepped Progress Bar</h2>
 
+    <h3 class="visually-hidden" aria-describeby="Step 1 of 4"></h3>
     <ol class="stepped-progressbar" role="progressbar" aria-valuemin="1" aria-valuemax="4">
         <li class="step" aria-valuenow="1"><span class="step-box current"><span class="step-number" aria-hidden="true">1</span></span></li>
         <li class="step"><span class="step-box"><span class="step-number" aria-hidden="true">2</span></span></li>
@@ -226,6 +227,7 @@
         <li class="step last"><span class="step-box"><i class="icon-flag-checkered" aria-hidden="true"></i></span></li>
     </ol>
 
+    <h3 class="visually-hidden" aria-describeby="Step 2 of 4"></h3>
     <ol class="stepped-progressbar" role="progressbar" aria-valuemin="1" aria-valuemax="4">
         <li class="step successful"><span class="step-box completed"><i class="icon-ok" aria-hidden="true"></i></span></li>
         <li class="step" aria-valuenow="2"><span class="step-box current"><span class="step-number" aria-hidden="true">2</span></span></li>
@@ -233,6 +235,7 @@
         <li class="step last"><span class="step-box"><i class="icon-flag-checkered" aria-hidden="true"></i></span></li>
     </ol>
 
+    <h3 class="visually-hidden" aria-describeby="Step 3 of 4"></h3>
     <ol class="stepped-progressbar" role="progressbar" aria-valuemin="1" aria-valuemax="4">
         <li class="step successful"><span class="step-box completed"><i class="icon-ok" aria-hidden="true"></i></span></li>
         <li class="step successful"><span class="step-box completed"><i class="icon-ok" aria-hidden="true"></i></span></li>
@@ -240,6 +243,7 @@
         <li class="step last" ><span class="step-box"><i class="icon-flag-checkered" aria-hidden="true"></i></span></li>
     </ol>
 
+    <h3 class="visually-hidden" aria-describeby="Step 4 of 4"></h3>
     <ol class="stepped-progressbar" role="progressbar" aria-valuemin="1" aria-valuemax="4">
         <li class="step successful"><span class="step-box completed"><i class="icon-ok" aria-hidden="true"></i></span></li>
         <li class="step successful"><span class="step-box completed"><i class="icon-ok" aria-hidden="true"></i></span></li>
