--- a/views/lexicon/tabs/progress_bars.html.twig
+++ b/views/lexicon/tabs/progress_bars.html.twig
@@ -219,32 +219,32 @@
     
     <h2 class="heading">Stepped Progress Bar</h2>
 
-    <h3 class="visually-hidden" aria-describeby="Step 1 of 4"></h3>
-    <ol class="stepped-progressbar" role="progressbar" aria-valuemin="1" aria-valuemax="4">
+    <h3 id="aria-stepped-progress-bar-heading-1" hidden>Step 1 of 4</h3>
+    <ol class="stepped-progressbar" role="progressbar" aria-valuemin="1" aria-valuemax="4" aria-describedby="aria-stepped-progress-bar-heading-1">
         <li class="step" aria-valuenow="1"><span class="step-box current"><span class="step-number" aria-hidden="true">1</span></span></li>
         <li class="step"><span class="step-box"><span class="step-number" aria-hidden="true">2</span></span></li>
         <li class="step"><span class="step-box"><span class="step-number" aria-hidden="true">3</span></span></li>
         <li class="step last"><span class="step-box"><i class="icon-flag-checkered" aria-hidden="true"></i></span></li>
     </ol>
 
-    <h3 class="visually-hidden" aria-describeby="Step 2 of 4"></h3>
-    <ol class="stepped-progressbar" role="progressbar" aria-valuemin="1" aria-valuemax="4">
+    <h3 id="aria-stepped-progress-bar-heading-2" hidden>Step 2 of 4</h3>
+    <ol class="stepped-progressbar" role="progressbar" aria-valuemin="1" aria-valuemax="4" aria-describedby="aria-stepped-progress-bar-heading-2">
         <li class="step successful"><span class="step-box completed"><i class="icon-ok" aria-hidden="true"></i></span></li>
         <li class="step" aria-valuenow="2"><span class="step-box current"><span class="step-number" aria-hidden="true">2</span></span></li>
         <li class="step"><span class="step-box"><span class="step-number" aria-hidden="true">3</span></span></li>
         <li class="step last"><span class="step-box"><i class="icon-flag-checkered" aria-hidden="true"></i></span></li>
     </ol>
 
-    <h3 class="visually-hidden" aria-describeby="Step 3 of 4"></h3>
-    <ol class="stepped-progressbar" role="progressbar" aria-valuemin="1" aria-valuemax="4">
+    <h3 id="aria-stepped-progress-bar-heading-3" hidden>Step 3 of 4</h3>
+    <ol class="stepped-progressbar" role="progressbar" aria-valuemin="1" aria-valuemax="4" aria-describedby="aria-stepped-progress-bar-heading-3">
         <li class="step successful"><span class="step-box completed"><i class="icon-ok" aria-hidden="true"></i></span></li>
         <li class="step successful"><span class="step-box completed"><i class="icon-ok" aria-hidden="true"></i></span></li>
         <li class="step" aria-valuenow="3"><span class="step-box current"><span class="step-number" aria-hidden="true">3</span></span></li>
         <li class="step last" ><span class="step-box"><i class="icon-flag-checkered" aria-hidden="true"></i></span></li>
     </ol>
 
-    <h3 class="visually-hidden" aria-describeby="Step 4 of 4"></h3>
-    <ol class="stepped-progressbar" role="progressbar" aria-valuemin="1" aria-valuemax="4">
+    <h3 id="aria-stepped-progress-bar-heading-4" hidden>Step 4 of 4</h3>
+    <ol class="stepped-progressbar" role="progressbar" aria-valuemin="1" aria-valuemax="4" aria-describedby="aria-stepped-progress-bar-heading-4">
         <li class="step successful"><span class="step-box completed"><i class="icon-ok" aria-hidden="true"></i></span></li>
         <li class="step successful"><span class="step-box completed"><i class="icon-ok" aria-hidden="true"></i></span></li>
         <li class="step successful"><span class="step-box completed"><i class="icon-ok" aria-hidden="true"></i></span></li>
