--- a/stylesheets/_component.progress-bars.scss
+++ b/stylesheets/_component.progress-bars.scss
@@ -75,8 +75,7 @@
         width: 30px;
         zoom: 1;
 
-        &.icon,
-        [class*='icon-'] {
+        .icon {
             vertical-align: middle;
         }
 
