Revert "Merge branch 'docs' into 755_tooltip-dismissal"
This reverts commit bf1f6614c3c0f493754d959a680b1e874fc41ff5, reversing
changes made to 19fa80e64a81a3d5d017dbf1f0b875f00c8272aa.

# Conflicts:
#	docs/_sass/_base.scss

--- a/docs/_sass/_code.scss
+++ b/docs/_sass/_code.scss
@@ -45,6 +45,10 @@ pre.prettyprint {
 }
 
 pre.prettyprint {
+    white-space: -moz-pre-line;
+    white-space: -pre-line;
+    white-space: -o-pre-line;
+    white-space: pre-line;
     word-wrap: break-word;
 }
 
