Fix Lexicon button example tables

--- a/views/lexicon/html/badges.html.twig
+++ b/views/lexicon/html/badges.html.twig
@@ -4,7 +4,7 @@
 
     <h2>Badges</h2>
 
-    <table class=" exmple table">
+    <table class="table lex-table">
         <thead>
             <tr>
                 <td></td>
