--- a/views/lexicon/html/labels.html.twig
+++ b/views/lexicon/html/labels.html.twig
@@ -4,7 +4,7 @@
 
     <h2>Labels</h2>
 
-    <table class="lex-table">
+    <table class="table lex-table">
         <thead>
             <tr>
                 <td></td>
