Add ability to add styled screenreader samples to documentation
Add the following block as the last child of a `pulsar-example`, use `<var>` to denote user generated content like labels, values or help text.

```
<p class="screenreader">
    <q><var>First name</var> edit, blank</q>
 </p>
```

e.g.

```
<div class="pulsar-example form">
    <div class="form__group">
        <label for="inputTextSimple" class="control__label">First name</label>
        <div class="controls">
            <input id="inputTextSimple" name="inputText" type="text" class="form__control">
        </div>
    </div>

    <p class="screenreader">
        <q><var>First name</var> edit, blank</q>
    </p>
</div>
```

--- a/docs/css/styles.scss
+++ b/docs/css/styles.scss
@@ -12,6 +12,7 @@
 @import "layout";
 @import "posts";
 @import "prettify";
+@import "screenreader";
 @import "sidebar";
 @import "message";
 
@@ -135,7 +136,7 @@ $fa-css-prefix: 'icon';
 }
 
 .pulsar-example {
-    border: 1px solid #e5e5e5;
+    border: 1px solid #ccc;
     border-top-right-radius: 10px;
     border-bottom-left-radius: 10px;
     display: table;
