--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -54,15 +54,31 @@ items         | array  | An array of items to put in the dropdown list (usually 
     {% import _self as form %}
     {% import '@pulsar/pulsar/v2/helpers/elem.html.twig' as elem %}
 
-    {{
-        form.group({
-            'parent': options
-                |only('bare class error guidance guidance-container help id label required show-label type')
-                |merge({'class': options.class|default ~ ' form__button-group'}),
-            'controls': {'class': 'btn__group'},
-            'inputs': options.items
-        })
-    }}
+    {% if options.help is defined and options.help is not empty %}
+        {% set help_id = 'guid-' ~ random() %}
+        {% set options = options|merge({ 'help_id': help_id }) %}
+
+        {{
+            form.group({
+                'parent': options
+                    |only('bare class error guidance guidance-container help help_id id label required show-label type')
+                    |merge({'class': options.class|default ~ ' form__button-group', 'aria-describedby': help_id}),
+                'controls': {'class': 'btn__group'},
+                'inputs': options.items
+            })
+        }}
+    {% else %}
+        {{
+            form.group({
+                'parent': options
+                    |only('bare class error guidance guidance-container help help_id id label required show-label type')
+                    |merge({'class': options.class|default ~ ' form__button-group'}),
+                'controls': {'class': 'btn__group'},
+                'inputs': options.items
+            })
+        }}
+    {% endif %}
+
 {% endspaceless %}
 {% endmacro %}
 
@@ -116,10 +132,14 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
     {% import _self as form %}
     {% import '@pulsar/pulsar/v2/helpers/elem.html.twig' as elem %}
 
+    {% if options.help is defined and options.help is not empty %}
+        {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
+    {% endif %}
+
     {{
         form.group({
             'parent': options
-                |only('bare class error guidance guidance-container help id label required show-label')
+                |only('bare class error guidance guidance-container help help_id id label required show-label')
                 |defaults({
                     'class': 'form-checkbox'
                 }),
@@ -192,6 +212,10 @@ data-*          | string | Data attributes, eg: `'data-foo': 'bar'`
     {% import _self as form %}
     {% import '@pulsar/pulsar/v2/helpers/elem.html.twig' as elem %}
 
+    {% if options.help is defined and options.help is not empty %}
+        {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
+    {% endif %}
+
     {% set inputClass = 'checkbox' %}
     {%
         if options.bare is defined
@@ -204,7 +228,7 @@ data-*          | string | Data attributes, eg: `'data-foo': 'bar'`
 
     {%
         set input = elem.input(options
-            |exclude('error guidance guidance-container')
+            |exclude('error guidance guidance-container help')
             |merge({
                 'class': inputClass,
                 'label': null,
@@ -224,7 +248,7 @@ data-*          | string | Data attributes, eg: `'data-foo': 'bar'`
     {{
         form.group({
             'parent': options
-                |only('bare class error help id')
+                |only('bare class error help help_id id')
                 |defaults({
                     'class': 'form-checkbox-inline'
                 }),
@@ -274,7 +298,6 @@ label through the use of the sibling `+` CSS selector.
 Option   | Type   | Description
 -------- | ------ | ------------------------------------------------------------
 form     | string | Specific one or more forms this label belongs to
-help     | string | Additional guidance information to be displayed next to the input
 id       | string | A unique identifier, will also be used as the label's `for` attribute
 name     | string | The name of this control
 required | bool   | Adds `required` and `aria-required="true"` attributes
@@ -418,15 +441,34 @@ show-label | bool   | Control visibility of the `<label>` element without affect
 
     {% endif %}
 
-    {{
-        form.group({
-            'parent': options
-                |only('bare class error guidance guidance-container help id label required show-label')
-                |exclude('multiple')
-                |defaults({'class': 'form-choice'}),
-            'inputs': inputs
-        })
-    }}
+    {% if options.help is defined and options.help is not empty %}
+        {% set help_id = 'guid-' ~ random() %}
+        {% set options = options|merge({ 'help_id': help_id }) %}
+
+        {{
+            form.group({
+                'parent': options
+                    |only('bare class error guidance guidance-container help help_id id label required show-label')
+                    |exclude('multiple')
+                    |defaults({'class': 'form-choice'})
+                    |merge({'aria-describedby': help_id}),
+                'inputs': inputs
+            })
+        }}
+    
+    {% else %}
+
+        {{
+            form.group({
+                'parent': options
+                    |only('bare class error guidance guidance-container help help_id id label required show-label')
+                    |exclude('multiple')
+                    |defaults({'class': 'form-choice'}),
+                'inputs': inputs
+            })
+        }}
+
+    {% endif %}
 
 {% endspaceless %}
 {% endmacro %}
@@ -482,6 +524,10 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
     {% import _self as form %}
     {% import '@pulsar/pulsar/v2/helpers/util.html.twig' as util %}
 
+    {% if options.help is defined and options.help is not empty %}
+        {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
+    {% endif %}
+
     {%
         set options = options|default({})|merge({
             'class': options.class|default ~ ' colorpicker js-colorpicker',
@@ -518,6 +564,20 @@ https://jadu.github.io/pulsar/form-helpers/compound
         {% set groupClass = groupClass ~ ' has-error' %}
     {% endif %}
 
+    {% if options.help is defined and options.help is not empty %}
+        {% set help_id = 'guid-' ~ random() %}
+        {% set options = options|merge({ 'help_id': help_id }) %} {# needed? #}
+
+    <fieldset{{
+        attributes(options
+                |only('class id')
+                |defaults({
+                    'class': groupClass,
+                    'aria-describedby': help_id,
+                })
+            )
+    -}}>
+    {% else %}
     <fieldset{{
         attributes(options
                 |only('class id')
@@ -526,6 +586,8 @@ https://jadu.github.io/pulsar/form-helpers/compound
                 })
             )
     -}}>
+    {% endif %}
+
     <legend class="control__label" {{ util.id(options.id ~ '[label]') }}>{{ options.label|default }} {{ util.guidance(options.guidance|default, { 'guidance-container': options['guidance-container']|default }) }}</legend>
 
     <div class="controls">
@@ -554,7 +616,10 @@ https://jadu.github.io/pulsar/form-helpers/compound
         {% endfor %}
 
         {{ form.error({ 'value': options.error|default }) }}
-        {{ form.help({ 'value': options.help|default }) }}
+
+        {% if options.help is defined and options.help is not empty %}
+            {{ form.help({ 'value': options.help|default, 'id': options.help_id }) }}
+        {% endif %}
     </div>
 </fieldset>
 
@@ -776,6 +841,10 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
             'data-datepicker': 'true'
         })
     %}
+
+    {% if options.help is defined and options.help is not empty %}
+        {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
+    {% endif %}
 
     {{ form.text(options) }}
 
@@ -1014,9 +1083,13 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
     {% import _self as form %}
     {% import '@pulsar/pulsar/v2/helpers/elem.html.twig' as elem %}
 
+    {% if options.help is defined and options.help is not empty %}
+        {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
+    {% endif %}
+
     {{
         form.group({
-            'parent': options|only('bare class error guidance guidance-container help id label required show-label'),
+            'parent': options|only('bare class error guidance guidance-container help help_id id label required show-label'),
             'inputs': [
                 elem.input(options
                     |exclude('bare class guidance guidance-container error help label show-label')
@@ -1141,7 +1214,7 @@ controls.class    | string | A space separated list of class names
     {% if options.parent.bare is not defined or options.parent.bare != true %}
     <div{{
         attributes(options.parent
-                |only('class')
+                |only('class aria-describedby')
                 |defaults({
                     'class': groupClass
                 })
@@ -1241,7 +1314,10 @@ controls.class    | string | A space separated list of class names
         {% endif %}
 
             {{ form.error({ 'value': options.parent.error|default }) }}
-            {{ form.help({ 'value': options.parent.help|default }) }}
+
+        {% if options.parent.help is defined and options.parent.help is not empty and options.parent.help_id is defined and options.parent.help_id is not empty %}
+            {{ form.help({ 'value': options.parent.help|default, 'id': options.parent.help_id }) }}
+        {% endif %}
 
         {% if options.parent.bare is not defined or options.parent.bare != true %}
         </div>
@@ -1282,7 +1358,7 @@ value  | string | The string or html markup to render inside the help block
 {% spaceless %}
 
     {% if options.value is defined and options.value is not empty %}
-        <span class="help-block">
+        <span class="help-block"{% if options.id is defined and options.id is not empty %} id="{{- options.id|raw -}}"{% endif %}>
             {{- options.value|raw -}}
         </span>
     {% endif %}
@@ -1447,10 +1523,14 @@ data-*     | string | Data attributes, eg: `'data-foo': 'bar'`
     {% import _self as form %}
     {% import '@pulsar/pulsar/v2/helpers/elem.html.twig' as elem %}
 
+    {% if options.help is defined and options.help is not empty %}
+        {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
+    {% endif %}
+
     {{
         form.group({
             'parent': options
-                |only('bare class error guidance guidance-container help id label required show-label')
+                |only('bare class error guidance guidance-container help help_id id label required show-label')
                 |defaults({
                     'class': 'form-radio'
                 }),
@@ -1520,6 +1600,10 @@ data-*          | string | Data attributes, eg: `'data-foo': 'bar'`
     {% import _self as form %}
     {% import '@pulsar/pulsar/v2/helpers/elem.html.twig' as elem %}
 
+    {% if options.help is defined and options.help is not empty %}
+        {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
+    {% endif %}
+
     {% set inputClass = 'radio' %}
     {%
         if options.bare is defined
@@ -1532,7 +1616,7 @@ data-*          | string | Data attributes, eg: `'data-foo': 'bar'`
 
     {%
         set input = elem.input(options
-            |exclude('error guidance guidance-container')
+            |exclude('error guidance guidance-container help')
             |merge({
                 'class': inputClass,
                 'label': null,
@@ -1553,7 +1637,7 @@ data-*          | string | Data attributes, eg: `'data-foo': 'bar'`
     {{
         form.group({
             'parent': options
-                |only('bare class error guidance-container help id')
+                |only('bare class error guidance-container help help_id id')
                 |defaults({
                     'class': 'form-radio-inline'
                 }),
@@ -1760,9 +1844,13 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
     {% import _self as form %}
     {% import '@pulsar/pulsar/v2/helpers/elem.html.twig' as elem %}
 
+    {% if options.help is defined and options.help is not empty %}
+        {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
+    {% endif %}
+
     {{
         form.group({
-            'parent': options|only('append append_type bare class error guidance guidance-container help id label prepend prepend_type required show-label'),
+            'parent': options|only('append append_type bare class error guidance guidance-container help help_id id label prepend prepend_type required show-label'),
             'inputs': [
                 elem.select(
                     options
@@ -1835,9 +1923,13 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
     {% import _self as form %}
     {% import '@pulsar/pulsar/v2/helpers/elem.html.twig' as elem %}
 
+    {% if options.help is defined and options.help is not empty %}
+        {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
+    {% endif %}
+
     {{
         form.group({
-            'parent': options|only('append append_type bare class error guidance guidance-container help id prepend prepend_type label required show-label'),
+            'parent': options|only('append append_type bare class error guidance guidance-container help help_id id prepend prepend_type label required show-label'),
             'inputs': [
                 elem.select2(options
                     |exclude('bare class error guidance guidance-container help label show-label')
@@ -1951,9 +2043,13 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
 
     {% set options = options|default({})|merge({ 'type': options.type|default('text') }) %}
 
+    {% if options.help is defined and options.help is not empty %}
+        {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
+    {% endif %}
+
     {{
         form.group({
-            'parent': options|only('append append_type bare class error guidance guidance-container help id label prepend prepend_type required show-label'),
+            'parent': options|only('append append_type bare class error guidance guidance-container help help_id id label prepend prepend_type required show-label'),
             'inputs': [
                 elem.input(
                     options|exclude('append_type bare class error guidance guidance-container help label prepend_type show-label')
@@ -2017,9 +2113,13 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
     {% import _self as form %}
     {% import '@pulsar/pulsar/v2/helpers/elem.html.twig' as elem %}
 
+    {% if options.help is defined and options.help is not empty %}
+        {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
+    {% endif %}
+
     {{
         form.group({
-            'parent': options|only('bare class error guidance guidance-container help id label required show-label'),
+            'parent': options|only('bare class error guidance guidance-container help help_id id label required show-label'),
             'inputs': [
                 elem.textarea(options
                     |exclude('bare class error guidance guidance-container help label show-label')
@@ -2147,9 +2247,13 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
 
     {% set toggleLabel = '<span class="hide">' ~ options.label ~ '</span>' %}
 
+    {% if options.help is defined and options.help is not empty %}
+        {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
+    {% endif %}
+
     {%
         set toggle = elem.input(options
-            |exclude('error guidance guidance-container show-label label')
+            |exclude('error guidance guidance-container show-label label help')
             |merge({
                 'class': 'toggle-switch',
                 'type': 'checkbox'
@@ -2164,7 +2268,7 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
     {{
         form.group({
             'parent': options
-                |only('bare class error guidance guidance-container help label required show-label')
+                |only('bare class error guidance guidance-container help help_id label required show-label')
                 |merge({
                     'class': options.class|default ~ ' form__group--toggle'
                 }),
