Added additional help text lexicon examples for testing

--- a/views/lexicon/forms/choice.html.twig
+++ b/views/lexicon/forms/choice.html.twig
@@ -26,7 +26,8 @@
                     'value': 'three',
                     'name': 'one'
                 }
-            ]
+            ],
+            'help': 'Help text to give more information about expected input'
         })
     }}
 
@@ -51,7 +52,8 @@
                     'value': 'three',
                     'name': 'two'
                 }
-            ]
+            ],
+            'help': 'Help text to give more information about expected input'
         })
     }}
 
@@ -76,7 +78,8 @@
                     'value': 'three',
                     'name': 'one'
                 }
-            ]
+            ],
+            'help': 'Help text to give more information about expected input'
         })
     }}
 
@@ -102,7 +105,8 @@
                     'value': 'three',
                     'name': 'one'
                 }
-            ]
+            ],
+            'help': 'Help text to give more information about expected input'
         })
     }}
 
@@ -143,7 +147,8 @@
                     'value': 'six',
                     'name': 'three'
                 }
-            ]
+            ],
+            'help': 'Help text to give more information about expected input'
         })
     }}
 
@@ -185,7 +190,8 @@
                     'value': 'six',
                     'name': 'four'
                 }
-            ]
+            ],
+            'help': 'Help text to give more information about expected input'
         })
     }}
 
@@ -210,7 +216,8 @@
                     'value': 'underline',
                     'name': 'five'
                 },
-            ]
+            ],
+            'help': 'Help text to give more information about expected input'
         })
     }}
 
@@ -235,7 +242,8 @@
                     'value': 'underline',
                     'name': 'foo'
                 },
-            ]
+            ],
+            'help': 'Help text to give more information about expected input'
         })
     }}
 
