--- a/views/lexicon/forms/compound.html.twig
+++ b/views/lexicon/forms/compound.html.twig
@@ -44,6 +44,39 @@
 
     {{
         form.compound({
+            'id': 'comp-1',
+            'label': 'Date of birth',
+            'inputs': [
+                {
+                    'class': 'form__control-col--1',
+                    'label': 'Day',
+                    'id': 'dd-1',
+                    'placeholder': 'DD',
+                    'show-label': false,
+                    'type': 'text'
+                },
+                {
+                    'class': 'form__control-col--1',
+                    'label': 'Month',
+                    'id': 'mm-1',
+                    'placeholder': 'MM',
+                    'show-label': false,
+                    'type': 'text'
+                },
+                {
+                    'class': 'form__control-col--1',
+                    'label': 'Year',
+                    'id': 'yyyy-1',
+                    'placeholder': 'YYYY',
+                    'show-label': false,
+                    'type': 'text'
+                }
+            ]
+        })
+    }}
+
+    {{
+        form.compound({
             'id': 'comp-2',
             'help': 'How long the system should wait for a response, usually 30 seconds',
             'label': 'Timeout',
