--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/date-help.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/date-help.html.twig
@@ -1,8 +1,6 @@
 {% extends '@cssTests/visual-regression-layout.html.twig' %}
 {% block body %}
 {{
-    form.date(
-    	{'help': 'my help text'}
-    )
+    form.date({'help': 'my help text'})
 }}
 {% endblock %}
