Substitute ‘&times;’ with ‘×’ for greater consistency

--- a/views/lexicon/tabs/modals.html.twig
+++ b/views/lexicon/tabs/modals.html.twig
@@ -44,7 +44,7 @@
     <div class="modal__dialog">
         <div class="modal__content">
             <div class="modal__header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close dialog">&times;</button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close dialog">×</button>
                 <h4 class="modal__title" id="dialog-title">Standard modal</h4>
             </div>
             <div class="modal__body">
