Improve Screen Reader Description Sample Text

--- a/views/lexicon/patterns/reporting/report.html.twig
+++ b/views/lexicon/patterns/reporting/report.html.twig
@@ -256,7 +256,7 @@
               <h4 class="modal__title">Add Schedule</h4>
             </div>
             <div class="modal__body">
-                <p id="dialog-description" class="sr-only">SR description goes here</p>
+                <p id="dialog-description" class="hide">Here goes a short description (a couple of lines) about the modal's purpose, if needed.</p>
                 {{ form.create() }}
 
                     {{
