--- a/views/lexicon/tabs/modals.html.twig
+++ b/views/lexicon/tabs/modals.html.twig
@@ -48,7 +48,7 @@
                 <h4 class="modal__title" id="dialog-title">Standard modal</h4>
             </div>
             <div class="modal__body">
-                <p id="dialog-description" class="sr-only">SR description goes here</p>
+                <p id="dialog-description" class="hide">SR description goes here</p>
                 
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra dui ac congue fringilla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc sit amet feugiat diam. Proin eu condimentum elit. Donec facilisis urna sed tortor semper tincidunt. Maecenas tortor justo, rhoncus a luctus eget, consectetur suscipit est. In molestie posuere lectus. Vestibulum sit amet ligula odio. Nulla lobortis neque ac porta accumsan.</p>
 
