Add aria-modal true to the working example of Lexicon

--- a/views/lexicon/tabs/modals.html.twig
+++ b/views/lexicon/tabs/modals.html.twig
@@ -40,7 +40,7 @@
 
 <p><a data-toggle="modal" href="#myModal" class="btn">Launch Standard Modal</a></p>
 
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="dialog-title" aria-describedby="dialog-description">
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-modal="true" aria-labelledby="dialog-title" aria-describedby="dialog-description">
     <div class="modal__dialog">
         <div class="modal__content">
             <div class="modal__header">
@@ -48,7 +48,7 @@
                 <h4 class="modal__title" id="dialog-title">Standard modal</h4>
             </div>
             <div class="modal__body">
-                <p id="dialog-description" class="hide">SR description goes here</p>
+                <p id="dialog-description" class="hide">Here goes a short description (a couple of lines) about the modal's purpose, if needed.</p>
                 
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra dui ac congue fringilla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc sit amet feugiat diam. Proin eu condimentum elit. Donec facilisis urna sed tortor semper tincidunt. Maecenas tortor justo, rhoncus a luctus eget, consectetur suscipit est. In molestie posuere lectus. Vestibulum sit amet ligula odio. Nulla lobortis neque ac porta accumsan.</p>
 
