Add Spacing for better visual while responsive

--- a/stylesheets/_component.progress-bars.scss
+++ b/stylesheets/_component.progress-bars.scss
@@ -50,6 +50,7 @@
     .step {
         display: block;
         float: left;
+        margin: 10px 0 10px;
         overflow: hidden;
         position: relative;
         width: 50px;
