--- a/stylesheets/_component.progress-bars.scss
+++ b/stylesheets/_component.progress-bars.scss
@@ -50,7 +50,7 @@
     .step {
         display: block;
         float: left;
-        margin: 10px 0 10px;
+        margin: 10px 0;
         overflow: hidden;
         position: relative;
         width: 50px;
