Change aria-hidden of Modal Close Buttons in Playground

--- a/views/playground/admin-mappings/index.html.twig
+++ b/views/playground/admin-mappings/index.html.twig
@@ -35,7 +35,7 @@
     <div class="modal__dialog">
         <div class="modal__content">
             <div class="modal__header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close dialog">×</button>
                 <h1 class="modal__title">Connect CXM User</h1>
             </div>
             <div class="modal__body">
@@ -78,7 +78,7 @@
     <div class="modal__dialog">
         <div class="modal__content">
             <div class="modal__header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close dialog">×</button>
                 <h1 class="modal__title">Connect CXM User</h1>
             </div>
             <div class="modal__body">
@@ -127,7 +127,7 @@
     <div class="modal__dialog">
         <div class="modal__content">
             <div class="modal__header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close dialog">×</button>
                 <h1 class="modal__title">Connect CXM User</h1>
             </div>
             <div class="modal__body">
@@ -176,7 +176,7 @@
     <div class="modal__dialog">
         <div class="modal__content">
             <div class="modal__header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close dialog">×</button>
                 <h1 class="modal__title">Connect CXM User</h1>
             </div>
             <div class="modal__body">
@@ -237,7 +237,7 @@
     <div class="modal__dialog">
         <div class="modal__content">
             <div class="modal__header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close dialog">×</button>
                 <h1 class="modal__title">Create New CXM User</h1>
             </div>
             <div class="modal__body">
