--- a/views/playground/integrations/singlepoint_six.html.twig
+++ b/views/playground/integrations/singlepoint_six.html.twig
@@ -157,7 +157,7 @@
                                             <tr>
                                                 <td colspan="4">
 
-                                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close dialog">×</button>
                                                     {{
                                                         form.fieldset_start({'legend': 'Add Adapters'})
                                                     }}
