--- a/views/playground/xfp-rules/templates.html.twig
+++ b/views/playground/xfp-rules/templates.html.twig
@@ -117,7 +117,7 @@
         <div class="modal__dialog">
             <div class="modal__content">
                 <div class="modal__header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close dialog">×</button>
                     <h1 class="modal__title">Edit ‘New green waste case’ template</h1>
                 </div>
                 <div class="modal__body">
@@ -266,7 +266,7 @@
         <div class="modal__dialog">
             <div class="modal__content">
                 <div class="modal__header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close dialog">×</button>
                     <h1 class="modal__title">New template</h1>
                 </div>
                 <div class="modal__body">
@@ -367,7 +367,7 @@
         <div class="modal__dialog">
             <div class="modal__content">
                 <div class="modal__header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close dialog">×</button>
                     <h1 class="modal__title">New template</h1>
                 </div>
                 <div class="modal__body">
@@ -449,7 +449,7 @@
         <div class="modal__dialog">
             <div class="modal__content">
                 <div class="modal__header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close dialog">×</button>
                     <h1 class="modal__title">Create ‘New green waste case’ template</h1>
                 </div>
                 <div class="modal__body">
