Rename u-margin-bottom class

--- a/stylesheets/_utility.utilities.scss
+++ b/stylesheets/_utility.utilities.scss
@@ -334,12 +334,7 @@ div.no-results {
     margin-bottom: 0 !important;
 }
 
-%u-margin-bottom-1,
-.u-margin-bottom-1 {
+%u-margin-bottom,
+.u-margin-bottom {
     margin-bottom: $margin-base !important;
-}
-
-%u-margin-bottom-2,
-.u-margin-bottom-2 {
-    margin-bottom: $margin-base * 2 !important;
 }
