Change table detail title to a H1

--- a/stylesheets/_component.table-detail.scss
+++ b/stylesheets/_component.table-detail.scss
@@ -47,6 +47,7 @@
 
 .table-detail__title {
     line-height: $modal-title-line-height;
+    font-size: $font-size-large;
     margin: 0;
     overflow: hidden;
     text-overflow: ellipsis;
