Fix merge conflicts

--- a/stylesheets/_config.variables.scss
+++ b/stylesheets/_config.variables.scss
@@ -4,7 +4,7 @@
 
 $font-path:                           '../fonts/' !default;
 $image-path:                          '../images/' !default;
-$libs-path:                           '../libs/' !default;
+$libs-path:                           '../node_modules/' !default;
 
 // -----------------------------------------------------------------------------
 //  Typefaces
