Change notification dismiss action to use <button> rather than <a>

--- a/views/lexicon/includes/notifications.html.twig
+++ b/views/lexicon/includes/notifications.html.twig
@@ -10,7 +10,7 @@
         <div class="notifications-container dropdown__menu"><!--
             --><div class="notifications__header">
                 <h1 class="notifications-title">Notifications</h1>
-              <a href="#" class="notifications-dismiss">dismiss all</a>
+                <button class="notifications-dismiss btn--naked">dismiss all</button>
             </div><!--
             --><div class="notifications-list">
                 <div class="notification is-new">
