--- a/views/pulsar/components/nav_help.html.twig
+++ b/views/pulsar/components/nav_help.html.twig
@@ -5,13 +5,13 @@
                 'title': 'CMS',
                 'description': 'User Manual',
                 'image': imgPath ~ '/branding/logo-cms-coloured.png',
-                'href': '#'
+                'href': '#path-to-cms-manual'
             },
             {
                 'title': 'Forms',
                 'description': 'User Manual',
                 'image': imgPath ~ '/branding/logo-xfp-coloured.png',
-                'href': '#'
+                'href': '#path-to-xfp-manual'
             }
         ]
     })
