Remove all instances of href=“#”

--- a/views/lexicon/base.html.twig
+++ b/views/lexicon/base.html.twig
@@ -9,9 +9,9 @@
 
 {%
     set breadcrumbs = [
-        {'label': 'Bread', 'href': '#'},
-        {'label': 'Crumb', 'href': '#'},
-        {'label': 'Trail', 'href': '#'}
+        {'label': 'Bread', 'href': '#bread'},
+        {'label': 'Crumb', 'href': '#crumb'},
+        {'label': 'Trail', 'href': '#trail'}
     ]
 %}
 
