--- a/views/lexicon/tabs/favicon.html.twig
+++ b/views/lexicon/tabs/favicon.html.twig
@@ -10,7 +10,7 @@
 
     <p>The favicon presets are convenience methods created for common situations. It is expected that this list will grow as the service is iterated and common patterns are identified.</p>
 
-    <p><strong>Circle Notification</strong></p>
+    <h3>Circle Notification</h3>
 
     {{
         html.button({
