--- a/views/lexicon/tabs/flash.html.twig
+++ b/views/lexicon/tabs/flash.html.twig
@@ -8,7 +8,7 @@
 	<div class="lexicon">
 		{{
 			flash.message({
-				'message': 'This is the default message style with <a href="#">an example link</a>',
+				'message': 'This is the default message style with <a href="#example">an example link</a>',
 				'sticky': false
 			})
 		}}
@@ -16,7 +16,7 @@
 	<div class="lexicon">
 		{{
 			flash.message({
-				'message': 'This is the success style with <a href="#">an example link</a>',
+				'message': 'This is the success style with <a href="#example">an example link</a>',
 				'type': 'success',
 				'sticky': false
 			})
@@ -25,7 +25,7 @@
 	<div class="lexicon">
 		{{
 			flash.message({
-				'message': 'This is the warning style with <a href="#">an example link</a>',
+				'message': 'This is the warning style with <a href="#example">an example link</a>',
 				'type': 'warning',
 				'sticky': false
 			})
@@ -34,7 +34,7 @@
 	<div class="lexicon">
 		{{
 			flash.message({
-				'message': 'This is the error style with <a href="#">an example link</a>',
+				'message': 'This is the error style with <a href="#example">an example link</a>',
 				'type': 'error',
 				'sticky': false
 			})
@@ -43,7 +43,7 @@
 	<div class="lexicon">
 		{{
 			flash.message({
-				'message': 'This is the info style with <a href="#">an example link</a>',
+				'message': 'This is the info style with <a href="#example">an example link</a>',
 				'type': 'info',
 				'sticky': false
 			})
