--- a/views/lexicon/tabs/progress_bars.html.twig
+++ b/views/lexicon/tabs/progress_bars.html.twig
@@ -71,7 +71,7 @@
 
     <div class="progress-list">
 
-        <a href="#" class="progress-list__item progress-list__item--current">
+        <a href="#one" class="progress-list__item progress-list__item--current">
             <span class="progress-list__label">
                 <span class="badge badge--round badge--outline">Step 1</span>
                 Cut a hole in a box
@@ -79,7 +79,7 @@
             <span class="progress-list__arrow">&gt;</span>
         </a>
 
-        <a href="#" class="progress-list__item">
+        <a href="#two" class="progress-list__item">
             <span class="progress-list__label">
                 <span class="badge badge--round badge--outline">Step 2</span>
                 Put your junk in that box
@@ -91,7 +91,7 @@
 
     <div class="progress-list">
 
-        <a href="#" class="progress-list__item progress-list__item--current">
+        <a href="#one" class="progress-list__item progress-list__item--current">
             <span class="progress-list__label">
                 <span class="badge badge--round badge--outline">Step 1</span>
                 Current
@@ -99,7 +99,7 @@
             <span class="progress-list__arrow">&gt;</span>
         </a>
 
-        <a href="#" class="progress-list__item">
+        <a href="#two" class="progress-list__item">
             <span class="progress-list__label">
                 <span class="badge badge--round badge--outline">Step 2</span>
                 Default
@@ -107,35 +107,7 @@
             <span class="progress-list__arrow">&gt;</span>
         </a>
 
-        <a href="#" class="progress-list__item">
-            <span class="progress-list__label">
-                <span class="badge badge--round badge--outline">Step 3</span>
-                Default
-            </span>
-            <span class="progress-list__arrow">&gt;</span>
-        </a>
-
-    </div>
-
-    <div class="progress-list">
-
-        <a href="#" class="progress-list__item progress-list__item--complete">
-            <span class="progress-list__label">
-                <span class="badge badge--round badge--outline">Step 1</span>
-                Complete
-            </span>
-            <span class="progress-list__arrow">&gt;</span>
-        </a>
-
-        <a href="#" class="progress-list__item progress-list__item--current">
-            <span class="progress-list__label">
-                <span class="badge badge--round badge--outline">Step 2</span>
-                Current
-            </span>
-            <span class="progress-list__arrow">&gt;</span>
-        </a>
-
-        <a href="#" class="progress-list__item">
+        <a href="#three" class="progress-list__item">
             <span class="progress-list__label">
                 <span class="badge badge--round badge--outline">Step 3</span>
                 Default
@@ -147,7 +119,7 @@
 
     <div class="progress-list">
 
-        <a href="#" class="progress-list__item progress-list__item--complete">
+        <a href="#one" class="progress-list__item progress-list__item--complete">
             <span class="progress-list__label">
                 <span class="badge badge--round badge--outline">Step 1</span>
                 Complete
@@ -155,7 +127,35 @@
             <span class="progress-list__arrow">&gt;</span>
         </a>
 
-        <a href="#" class="progress-list__item progress-list__item--complete">
+        <a href="#two" class="progress-list__item progress-list__item--current">
+            <span class="progress-list__label">
+                <span class="badge badge--round badge--outline">Step 2</span>
+                Current
+            </span>
+            <span class="progress-list__arrow">&gt;</span>
+        </a>
+
+        <a href="#three" class="progress-list__item">
+            <span class="progress-list__label">
+                <span class="badge badge--round badge--outline">Step 3</span>
+                Default
+            </span>
+            <span class="progress-list__arrow">&gt;</span>
+        </a>
+
+    </div>
+
+    <div class="progress-list">
+
+        <a href="#one" class="progress-list__item progress-list__item--complete">
+            <span class="progress-list__label">
+                <span class="badge badge--round badge--outline">Step 1</span>
+                Complete
+            </span>
+            <span class="progress-list__arrow">&gt;</span>
+        </a>
+
+        <a href="#two" class="progress-list__item progress-list__item--complete">
             <span class="progress-list__label">
                 <span class="badge badge--round badge--outline">Step 2</span>
                 Complete
@@ -163,7 +163,7 @@
             <span class="progress-list__arrow">&gt;</span>
         </a>
 
-        <a href="#" class="progress-list__item progress-list__item--current">
+        <a href="#three" class="progress-list__item progress-list__item--current">
             <span class="progress-list__label">
                 <span class="badge badge--round badge--outline">Step 3</span>
                 Current
@@ -175,7 +175,7 @@
 
     <div class="progress-list">
 
-        <a href="#" class="progress-list__item progress-list__item--complete">
+        <a href="#four" class="progress-list__item progress-list__item--complete">
             <span class="progress-list__label">
                 <span class="badge badge--round badge--outline">Step 1</span>
                 Complete
@@ -183,7 +183,7 @@
             <span class="progress-list__arrow">&gt;</span>
         </a>
 
-        <a href="#" class="progress-list__item progress-list__item--complete">
+        <a href="#five" class="progress-list__item progress-list__item--complete">
             <span class="progress-list__label">
                 <span class="badge badge--round badge--outline">Step 2</span>
                 Complete
@@ -191,7 +191,7 @@
             <span class="progress-list__arrow">&gt;</span>
         </a>
 
-        <a href="#" class="progress-list__item progress-list__item--complete">
+        <a href="#six" class="progress-list__item progress-list__item--complete">
             <span class="progress-list__label">
                 <span class="badge badge--round badge--outline">Step 3</span>
                 Complete
@@ -199,7 +199,7 @@
             <span class="progress-list__arrow">&gt;</span>
         </a>
 
-        <a href="#" class="progress-list__item progress-list__item--complete">
+        <a href="#seven" class="progress-list__item progress-list__item--complete">
             <span class="progress-list__label">
                 <span class="badge badge--round badge--outline">Step 4</span>
                 Complete
@@ -207,7 +207,7 @@
             <span class="progress-list__arrow">&gt;</span>
         </a>
 
-        <a href="#" class="progress-list__item progress-list__item--complete">
+        <a href="#eight" class="progress-list__item progress-list__item--complete">
             <span class="progress-list__label">
                 <span class="badge badge--round badge--outline">Step 5</span>
                 Complete
